src/test/ui/issues/issue-13497-2.stderr
error[E0515]: cannot return value referencing local variable `rawLines`
  --> $DIR/issue-13497-2.rs:3:29
   |
LL |     rawLines.iter().map(|l| l.trim()).collect()
   |     ---------------         ^^^^^^^^ returns a value referencing data owned by the current function
   |     |
   |     `rawLines` is borrowed here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0515`.
